fix(ui): alignment of trigger icon

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ html, body {
 
 .calendar-inner {
   position: absolute;
+  transform: translateY(5px);
 }
 
 h1 {
